tests/baselines/reference/destructureComputedProperty.errors.txt
tests/cases/compiler/destructureComputedProperty.ts(8,7): error TS2341: Property 'p' is private and only accessible within class 'C'.


==== tests/cases/compiler/destructureComputedProperty.ts (1 errors) ====
    declare const ab: { n: number } | { n: string };
    const nameN = "n";
    const { [nameN]: n } = ab;
    
    class C { private p: number; }
    const nameP = "p";
    const { [nameP]: p } = new C();
    const { p: p2 } = new C();
          ~~~~~~~~~
!!! error TS2341: Property 'p' is private and only accessible within class 'C'.
    